# ai_core

./: .env.example  .gitignore  API_DOCUMENTATION.md  API_LEARNING.md  API_LEARNING_IMPLEMENTATION.md  CHAT_FEATURE.md  Cargo.toml  FINAL_FIX.md  FULLSTACK_SETUP.md  OLLAMA_INTEGRATION.md  QUICKSTART.md  README.md  SUMMARY.md  TESTING_GUIDE.md  ZERO_WARNINGS.md  postman_collection.json  test_api.sh  test_quick.sh
frontend/: .gitignore  README.md  install.sh  package-lock.json  package.json  server.js
frontend/public/css/: style.css
frontend/public/js/: main.js
frontend/views/: chat.ejs  create.ejs  decision.ejs  experiences.ejs  index.ejs  interact.ejs  layout.ejs  personality.ejs  reflect.ejs  search.ejs  stats.ejs
frontend/views/partials/: footer.ejs  navbar.ejs
src/: api.rs  chat.rs  config.rs  decision.rs  dialog.rs  experience.rs  main.rs  memory.rs  middleware.rs  ollama.rs  pattern.rs  personality.rs
